--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./components/feed-tile";
 @import "./components/link-detail";
 @import "./components/expansion-window";
+@import "./components/feed-grid";
 
 
 html, body {
