--- a/src/templates/components/feed-grid.hbs
+++ b/src/templates/components/feed-grid.hbs
@@ -1,4 +1,4 @@
-<ul class="subreddit__grid">
+<ul class="subreddit__grid js__feed-grid">
     {{#each feed in stream}}
         {{feed-tile feed=feed enter="enter"}}
     {{/each}}
