--- a/src/styles/scss/components/_feed-tile.scss
+++ b/src/styles/scss/components/_feed-tile.scss
@@ -30,6 +30,10 @@
 
 }
 
+//===========================
+// Icon Bar
+//===========================
+
 $status-item-size: 60px;
 
 .feed-tile__status-bar {
@@ -43,133 +47,16 @@ $status-item-size: 60px;
 
 }
 
-.link__score {
-  @include flex(1 0 0);
-  cursor: pointer;
-  background-color: gray;
+.feet-tile__status-bar__item {
 
-  span {
-    color: white;
-    font-size: 2em;
-    font-weight: bold;
-  }
-}
-
-.link__upvote, .link__downvote, .link__save, .link__reddit, .link__enter {
-
-  @include flex(0 0 $status-item-size);
-  cursor: pointer;
-
-  span {
-    font-size: 2em;
-  }
-
-}
-
-.link__status-icon {
-  @include transition(0.5s);
   height: 100%;
-  display: flex;
-  @include justify-content(center);
-  @include align-items(center);
-  span { font-weight: bold; }
-}
 
-@mixin icon-blink($name, $from, $to, $speed) {
-  @include keyframes($name) {
-    0% { color: $from }
-    100% { color: $to }
-  };
-  @include animation-name($name);
-  @include animation-duration($speed);
-  @include animation-iteration-count(infinite);
-  @include animation-direction(alternate);
-}
-
-
-.link__upvote {
-  background-color: #6EC26E;
-
-  &:hover {
-    background-color: white;
-    span { color: #6EC26E; }
+  &.score {
+    @include flex(1 0 0);
   }
 
-  &.is-pending {
-    span {
-      @include icon-blink(upvote-blink, white, green, 0.3s);
-    }
-  }
-
-  &.is-on {
-    span { color: green; }
-  }
-
-}
-
-.link__downvote {
-  background-color: #DA7575;
-
-  &:hover {
-    background-color: white;
-    span { color: #DA7575; }
-  }
-
-  &.is-pending {
-    span {
-      @include icon-blink(downvote-blink, white, darkred, 0.3s);
-    }
-  }
-
-  &.is-on {
-    span { color: darkred; }
-  }
-
-}
-
-.link__score {
-  &:hover {}
-}
-
-.link__save {
-  background-color: #B6B67F;
-
-  &:hover {
-    background-color: #ffffff;
-    span { color: #B6B67F; }
-  }
-
-  &.is-pending {
-    span {
-      @include icon-blink(save-blink, white, rgb(249, 255, 0), 0.3s);
-    }
-  }
-
-  &.is-on {
-    span { color: rgb(249, 255, 0); }
-  }
-
-}
-
-.link__reddit {
-  background-color: rgb(87, 87, 87);
-  span { color: white; }
-
-  &:hover {
-    background-color: white;
-    span { color: rgb(87, 87, 87); }
-  }
-
-}
-
-
-.link__enter {
-  background-color: gray;
-  span { color: rgb(231, 231, 231); }
-
-  &:hover {
-    background-color: rgb(231, 231, 231);
-    span { color: gray; }
+  &.upvote, &.downvote, &.save, &.link, &.enter {
+    @include flex(0 0 $status-item-size);
   }
 
 }
