--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -4,6 +4,7 @@
 @import "./components/link-detail";
 @import "./components/expansion-window";
 @import "./components/feed-grid";
+@import "./components/content-buttons";
 
 
 html, body {
