--- a/src/templates/components/feed-tile.hbs
+++ b/src/templates/components/feed-tile.hbs
@@ -23,9 +23,7 @@
     </li>
 
     <li class="feet-tile__status-bar__item link">
-        <a class="link__status-icon link__reddit" target="_blank" href="{{feed.redditLink}}">
-            <span>r</span>
-        </a>
+        {{reddit-link content=feed}}
     </li>
 
     <li class="feet-tile__status-bar__item enter">
