--- a/src/templates/components/feed-tile.hbs
+++ b/src/templates/components/feed-tile.hbs
@@ -5,7 +5,7 @@
 <ul class="feed-tile__status-bar">
 
     <li class="feet-tile__status-bar__item score">
-        <div class="link__status-icon link__score">
+        <div class="feet-tile__status-bar__score">
             <span>{{feed.score}}</span>
         </div>
     </li>
@@ -27,7 +27,7 @@
     </li>
 
     <li class="feet-tile__status-bar__item enter">
-        <div class="link__status-icon link__enter" {{action "enter"}}>
+        <div class="feet-tile__status-bar__enter" {{action "enter"}}>
             <span>&#10132;</span>
         </div>
     </li>
