saving blink removed

--- a/src/styles/scss/components/_content-buttons.scss
+++ b/src/styles/scss/components/_content-buttons.scss
@@ -42,7 +42,7 @@
 
   &.is-pending {
     span {
-      @include icon-blink(save-blink, white, rgb(249, 255, 0), 0.3s);
+ //     @include icon-blink(save-blink, white, rgb(249, 255, 0), 0.3s);
     }
   }
 
