--- a/src/templates/components/link-detail.hbs
+++ b/src/templates/components/link-detail.hbs
@@ -6,19 +6,37 @@
     {{/if}}
 {{/if}}
 
-<div class="post__title-bar">
-    <h1 class="post__title-bar__title">
-        <a target="_blank" href="{{link.url}}">
-            {{link.title}}
-        </a>
-    </h1>
-    <h1 class="post__title-bar__stats">
-        <span class="post__title-bar__score">{{link.score}}</span>
-        <span class="post__title-bar__up">&#9650;</span>
-        <span class="post__title-bar__down">&#9660;</span>
-        <a class="post__title-bar__link" target="_blank" href="{{link.redditLink}}">&#10132;</a>
-    </h1>
-</div>
+<ul class="link-detail__status-bar">
+
+    <li class="link-detail__status-bar__item title">
+        <h1 class="link-detail__status-bar__title">
+            <a target="_blank" href="{{link.url}}">
+                {{link.title}}
+            </a>
+        </h1>
+    </li>
+
+    <li class="link-detail__status-bar__item score">
+        <span>{{link.score}}</span>
+    </li>
+
+    <li class="link-detail__status-bar__item link">
+        {{reddit-link content=link}}
+    </li>
+
+    <li class="link-detail__status-bar__item upvote">
+        {{vote-button content=link isUp=true}}
+    </li>
+
+    <li class="link-detail__status-bar__item downvote">
+        {{vote-button content=link isUp=false}}
+    </li>
+
+    <li class="link-detail__status-bar__item save">
+        {{save-button content=link}}
+    </li>
+
+</ul>
 
 <div class="post__comments-container">
     {{#if isLoadingComments}}
