--- a/src/styles/scss/components/_link-detail.scss
+++ b/src/styles/scss/components/_link-detail.scss
@@ -1,7 +1,112 @@
+@import "compass";
+
 .link-detail__imgur-embed {
   width: 100%;
   height: 45em;
   body {
     overflow: hidden;
   }
+}
+
+$status-bar-size: 3.5em;
+
+.link-detail__status-bar {
+  height: $status-bar-size;
+  display: flex;
+  @include align-items(center);
+  background-color: #A1A1A1;
+}
+
+.link-detail__status-bar__item {
+
+  height: 100%;
+
+  &.save, &.upvote, &.downvote, &.link {
+    @include flex(0 0 $status-bar-size);
+  }
+
+  &.title {
+    @include flex(1 0 0);
+    display: flex;
+    @include align-items(center);
+    padding-left: 1em;
+    padding-right: 1em;
+    a { color: rgb(48, 48, 48); }
+  }
+
+  &.score {
+
+    $gap: 1.5em;
+    display: flex;
+    @include align-items(center);
+    @include justify-content(center);
+    padding-right: $gap;
+    padding-left: $gap;
+    background-color: gray;
+
+    span {
+      color: white;
+      font-size: 2em;
+      font-weight: bold;
+    }
+
+  }
+
+}
+
+.link-detail__status-bar__title {
+
+  @include flex(1 0 0);
+  font-size: 1.5em;
+  line-height: 1.5em;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+}
+
+// comments
+
+$comments-indentation: 10px;
+
+.post__comments-container {
+  overflow: hidden;
+}
+
+.post__comments__tree {
+  overflow: hidden;
+  padding-right: $comments-indentation;
+}
+
+.post__comments__loading {
+  height: 3em;
+  background-color: #212022;
+  display: flex;
+  @include justify-content(center);
+  @include align-items(center);
+  color: gray;
+  font-weight: bold;
+}
+
+.post__comments__root {
+  margin-left: $comments-indentation;
+}
+
+.post__comments__body {
+  background-color: #252525;
+  color: gray;
+  min-height: 2em;
+  margin: $comments-indentation;
+  margin-left: 0;
+  margin-right: 0;
+  border-left: solid 10px #5E94B2;
+  padding: 10px;
+  display: flex;
+  @include align-items(center);
+
+  p {
+    font-size: 1.2em;
+  }
+
 }
