--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -25,3 +25,4 @@ a, a:link, a:hover, a:visited, a:active {
 @import "partials/feed-tile";
 @import "partials/post";
 @import "partials/mine";
+@import "partials/home";
