--- a/src/templates/application.hbs
+++ b/src/templates/application.hbs
@@ -23,10 +23,12 @@
     <div class="sidebar__account-container">
 
         {{#if account.profile}}
-            <div id="sidebar__account__profile" class="sidebar__account">
-                <h1>{{account.profile.name}}</h1>
-                <div {{action "logout" target=account}}>&#10060;</div>
-            </div>
+            {{#link-to 'home'}}
+                <div id="sidebar__account__profile" class="sidebar__account">
+                    <h1>{{account.profile.name}}</h1>
+                    <div {{action "logout" target=account}}>&#10060;</div>
+                </div>
+            {{/link-to}}
             <div class="sidebar__profile-container">
                 <ul>
                     {{#link-to "mine" "overview"}}<li>Overview</li>{{/link-to}}
