--- a/src/styles/scss/partials/_home.scss
+++ b/src/styles/scss/partials/_home.scss
@@ -8,15 +8,36 @@
 
 .home__subscription-list {
   padding: 1em;
+  display: inline-table;
+
+  > li {
+    display: inline-block;
+    position: relative;
+    margin: 5px;
+    width: 12em;
+    height: 12em;
+    vertical-align: top;
+  }
+
 }
 
 .home__subscription-item {
-  display: inline-block;
+  @include transition(0.25s);
+  position: absolute;
   background-color: gray;
-  margin: 5px;
-  width: 12em;
-  height: 12em;
-  vertical-align: top;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  &:hover {
+    @include box-shadow(0 0 20px 2px black);
+    z-index: 100;
+    top: -1em;
+    bottom: -1em;
+    left: -1em;
+    right: -1em;
+  }
 
   > a {
     display: flex;
