loading of subscription fixed

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./components/expansion-window";
 @import "./components/feed-grid";
 @import "./components/content-buttons";
+@import "./components/listing-loader";
 
 
 html, body {
