--- a/app/templates/components/comment-tree.hbs
+++ b/app/templates/components/comment-tree.hbs
@@ -1,6 +1,6 @@
 <ul class="post__comments__list">
 
-    {{#each comment in view.comments}}
+    {{#each comments as |comment|}}
 
         <li class="post__comments__item">
 
